<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">
    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.conceptosmedios.FirstFragment"
        android:label="@string/shared_preferences"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.conceptosmedios.SecondFragment"
        android:label="@string/writing_files"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_sqliteFragment"
            app:destination="@id/sqliteFragment" />
    </fragment>
    <fragment
        android:id="@+id/sqliteFragment"
        android:name="com.example.conceptosmedios.SqliteFragment"
        android:label="@string/fragment_sqlite"
        tools:layout="@layout/fragment_sqlite" >
        <action
            android:id="@+id/action_sqliteFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_sqliteFragment_to_linearLayoutFragment"
            app:destination="@id/linearLayoutFragment" />
    </fragment>
    <fragment
        android:id="@+id/linearLayoutFragment"
        android:name="com.example.conceptosmedios.LinearLayoutFragment"
        android:label="@string/fragment_linear_layout"
        tools:layout="@layout/fragment_linear_layout" >
        <action
            android:id="@+id/action_linearLayoutFragment_to_sqliteFragment"
            app:destination="@id/sqliteFragment" />
        <action
            android:id="@+id/action_linearLayoutFragment_to_tableLayoutFragment"
            app:destination="@id/tableLayoutFragment" />
    </fragment>
    <fragment
        android:id="@+id/tableLayoutFragment"
        android:name="com.example.conceptosmedios.TableLayoutFragment"
        android:label="@string/fragment_table_layout"
        tools:layout="@layout/fragment_table_layout" >
        <action
            android:id="@+id/action_tableLayoutFragment_to_linearLayoutFragment"
            app:destination="@id/linearLayoutFragment" />
    </fragment>
</navigation>